--- a/partner_symposium/package.json
+++ b/partner_symposium/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "accessible-astro-components": "^1.6.6",
     "astro": "^2.3.0",
-    "astro-compress": "2.3.8",
+    "astro-compress": "^2.3.8",
     "astro-icon": "^0.8.0",
     "astro-imagetools": "^0.8.1",
     "eslint": "^8.38.0",
