--- a/partner_symposium/package.json
+++ b/partner_symposium/package.json
@@ -18,7 +18,6 @@
     "@typescript-eslint/parser": "^5.58.0",
     "accessible-astro-components": "^1.6.6",
     "astro": "^2.3.0",
-    "astro-compress": "^2.3.8",
     "astro-icon": "^0.8.0",
     "astro-imagetools": "^0.8.1",
     "eslint": "^8.38.0",
@@ -35,6 +34,7 @@
     "@astrojs/react": "^2.1.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "astro-compressor": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
